--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "toydb"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+jsonrpc-v2 = "0.13.0"
+actix-rt = "2.9.0"
+actix-web = "4.4.0"
+actix = "0.13.1"
+tokio = { version = "1.34.0", features = ["fs"] }
+xdg = "2.5.2"
