--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ actix = "0.13.1"
 tokio = { version = "1.34.0", features = ["fs"] }
 xdg = "2.5.2"
 futures = "0.3.29"
+prost = "0.12"
+
+[build-dependencies]
+prost-build = "0.12.3"
