--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.34.0", features = ["fs"] }
 xdg = "2.5.2"
 futures = "0.3.29"
 prost = "0.12"
+bytes = "1.5.0"
 
 [build-dependencies]
 prost-build = "0.12.3"
