--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ futures = "0.3.29"
 prost = "0.12"
 bytes = "1.5.0"
 future-utils = "0.12.1"
+serde = "1.0.193"
 
 [build-dependencies]
 prost-build = "0.12.3"
