--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ prost = "0.12"
 bytes = "1.5.0"
 future-utils = "0.12.1"
 serde = "1.0.193"
+tracing-subscriber = "0.3"
+tracing = "0.1"
+tracing-appender = "0.2.3"
 
 [build-dependencies]
 prost-build = "0.12.3"
