--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde = "1.0.193"
 tracing-subscriber = "0.3"
 tracing = "0.1"
 tracing-appender = "0.2.3"
+rand = "0.8.5"
+tracing-test = "0.2.4"
 
 [build-dependencies]
 prost-build = "0.12.3"
