--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tracing = "0.1"
 tracing-appender = "0.2.3"
 rand = "0.8.5"
 tracing-test = "0.2.4"
+serde_json = "1.0.108"
 
 [build-dependencies]
 prost-build = "0.12.3"
