--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing-appender = "0.2.3"
 rand = "0.8.5"
 tracing-test = "0.2.4"
 serde_json = "1.0.108"
+sqlparser = "0.40.0"
 
 [build-dependencies]
 prost-build = "0.12.3"
