--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ tracing-test = "0.2.4"
 serde_json = "1.0.108"
 sqlparser = "0.40.0"
 reqwest = { version = "0.11.22", features = ["json"] }
-rustyline = "13.0.0"
+rustyline = { version = "13.0.0", features = ["default", "derive"] }
 clap = { version = "4.4.11", features = ["derive"] }
 ascii_table = "4.0.3"
 
