--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 jsonrpc-v2 = "0.13.0"
 actix-rt = "2.9.0"
 actix-web = "4.4.0"
+actix-cors = "0.6.5"
 actix = "0.13.1"
 tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
 xdg = "2.5.2"
