--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ actix = "0.13.1"
 tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
 xdg = "2.5.2"
 futures = "0.3.29"
+prost = "0.12"
 bytes = "1.5.0"
 future-utils = "0.12.1"
 serde = "1.0.193"
@@ -33,9 +34,6 @@ reqwest = { version = "0.11.22", features = ["json"] }
 rustyline = { version = "13.0.0", features = ["default", "derive"] }
 clap = { version = "4.4.11", features = ["derive"] }
 prettytable-rs = "0.10.0"
-capnp = "0.18.9"
-capnp-futures = "0.18.2"
-tokio-util = { version = "0.7.10", features = ["compat"] }
 
 [build-dependencies]
-capnpc = "0.18.0"
+prost-build = "0.12.3"
