--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ reqwest = { version = "0.11.22", features = ["json"] }
 rustyline = { version = "13.0.0", features = ["default", "derive"] }
 clap = { version = "4.4.11", features = ["derive"] }
 prettytable-rs = "0.10.0"
+capnp = "0.18.10"
+capnp-futures = "0.18.2"
 
 [build-dependencies]
 prost-build = "0.12.3"
+capnpc = "0.18.0"
