--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ clap = { version = "4.4.11", features = ["derive"] }
 prettytable-rs = "0.10.0"
 capnp = "0.18.10"
 capnp-futures = "0.18.2"
+bincode = "1.3.3"
 
 [build-dependencies]
 prost-build = "0.12.3"
